Fix modal z-index

--- a/codigo/src/components/WarningModal/styles.css
+++ b/codigo/src/components/WarningModal/styles.css
@@ -10,7 +10,7 @@
   top: 0;
   left: 0;
 
-  z-index: 10;
+  z-index: 1000;
 }
 
 .modal-container {
